--- a/Css/style.css
+++ b/Css/style.css
@@ -1,3 +1,8 @@
+* {
+  padding: 0px;
+  margin: 0px;
+  font-family: "Courier New", Courier, monospace;
+}
 body {
   background-color: aliceblue;
 }
